typeaheads: Fix mention typeaheads spill width. Fixes: #27825

--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -1508,6 +1508,8 @@ strong {
    on :focus. */
 .typeahead-menu {
     & li {
+        word-break: break-word;
+
         & a {
             display: block;
             padding: 3px 20px;
